--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -69,7 +69,7 @@
             <img class="imagen" src="https://fitory.com/static/FitApp/img/BotonSesionFacebook.png"> 
         </ul>
         <ul class="botonoesFG">
-                <img class="imagen" src="https://fitory.com/static/FitApp/img/BotonSesionGoogle.png"> 
+                <img class="imagen" src="https://fitory.com/static/FitApp/img/BotonSesionGoogle.png"> <br>
         </ul>
         </div>
     </div>
