--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,22 @@
-<div> 
-    <ul class="header">
-    <img class="logo" src="https://www.creativefabrica.com/wp-content/uploads/2019/03/Monogram-TF-Logo-Design-by-Greenlines-Studios.jpg"> 
-    </ul>
-    <div class="slogan"> TUFARMACIA</div>
-    <br>
-    <div>
-    <button class="boton" [routerLink]="['/','PerfilComponent']">Crear cuenta</button>
-    <br><br>
-    <button class="boton"  [routerLink]="['/','LoginComponent']">Iniciar Sesion</button>
-    </div><br>
-    <ul class="header">
-        <img class="imagen" src="https://tevafarmacia.es/sites/default/files/styles/max_650x650/public/tv-post-images/2020-06/cambios-en-la-compra-de-la-farmacia.jpg?itok=vXalMx7S"> 
-        </ul>
-    </div>
-     
+<div class="contenedor">
+  <img
+    class="logo"
+    src="https://cdn.discordapp.com/attachments/719010991924314126/977421848151216158/logotf.png"
+  />
+  <div class="slogan">TUFARMACIA</div>
+  <br />
+  <div>
+    <button class="boton" [routerLink]="['/', 'PerfilComponent']">
+      Crear cuenta
+    </button>
+    <br /><br />
+    <button class="boton" [routerLink]="['/', 'LoginComponent']">
+      Iniciar Sesion
+    </button>
+  </div>
+  <br />
+  <img
+    class="logo"
+    src="https://tevafarmacia.es/sites/default/files/styles/max_650x650/public/tv-post-images/2020-06/cambios-en-la-compra-de-la-farmacia.jpg?itok=vXalMx7S"
+  />
+</div>
