--- a/src/app/perfil/perfil.component.scss
+++ b/src/app/perfil/perfil.component.scss
@@ -10,6 +10,7 @@
 }
 
 .header {
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,10 +18,13 @@
   align-items: center;
 
   img {
+    
+    position: relative;
     width: 270px;
     height: 150px;
+    padding: 1px;
 
-    @media (max-width: 560px) {
+    @media (max-width: 800px) {
       width: 30%;
       height: 100px;
     }
