--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,12 +1,14 @@
 <div class="contenedor">
-  <a class="atras" href="javascript:history.back()">
-    <img
-      src="https://thumbs.dreamstime.com/b/icono-de-flecha-s%C3%B3lida-hacia-atr%C3%A1s-o-la-izquierda-gran-tama%C3%B1o-negro-esbozado-como-s%C3%ADmbolo-vector-189359889.jpg"
-      height="33"
-      width="50"
-      alt="Botón"
-    />
-  </a>
+  <div class="atras-container">
+    <a class="atras" href="javascript:history.back()">
+      <img
+        src="https://thumbs.dreamstime.com/b/icono-de-flecha-s%C3%B3lida-hacia-atr%C3%A1s-o-la-izquierda-gran-tama%C3%B1o-negro-esbozado-como-s%C3%ADmbolo-vector-189359889.jpg"
+        height="33"
+        width="50"
+        alt="Botón"
+      />
+    </a>
+  </div>
 
   <div class="header">
     <img
