--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,19 @@
 <div class="contenedor">
-  <a class="atras" href="javascript:history.back()">
-    <img
-      src="https://thumbs.dreamstime.com/b/icono-de-flecha-s%C3%B3lida-hacia-atr%C3%A1s-o-la-izquierda-gran-tama%C3%B1o-negro-esbozado-como-s%C3%ADmbolo-vector-189359889.jpg"
-      height="33"
-      width="50"
-      alt="Botón"
-    />
-  </a>
+  <div class="atras-container">
+    <a class="atras" href="javascript:history.back()">
+      <img
+        src="https://thumbs.dreamstime.com/b/icono-de-flecha-s%C3%B3lida-hacia-atr%C3%A1s-o-la-izquierda-gran-tama%C3%B1o-negro-esbozado-como-s%C3%ADmbolo-vector-189359889.jpg"
+        height="33"
+        width="50"
+        alt="Botón"
+      />
+    </a>
+  </div>
   <div class="header">
     <img
       src="https://cdn.discordapp.com/attachments/719010991924314126/977421848151216158/logotf.png"
     />
 
-    
     <div class="slogan2">TUFARMACIA</div>
   </div>
   <div class="formulario">
