--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 .contenedor {
   background-color: black;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -120,10 +120,15 @@
   margin-top: 10px;
 }
 
-.atras {
-  position: absolute;
-  top: 15px;
-  left: 20px;
+.atras-container {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  .atras {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+  }
 }
 
 .fix-select {
