--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -95,7 +95,7 @@
           placeholder="Password"
           required
         />
-        <label for="floatingPassword">Contrasela</label>
+        <label for="floatingPassword">Contraseña</label>
       </div>
       <div class="form-floating mb-3">
         <input
