--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
     <button class="boton" [routerLink]="['/', 'PerfilComponent']">
       Crear cuenta
     </button>
-    <br /><br />
+    <br />
     <button class="boton" [routerLink]="['/', 'LoginComponent']">
       Iniciar Sesion
     </button>
@@ -17,6 +17,6 @@
   <br />
   <img
     class="logo"
-    src="https://tevafarmacia.es/sites/default/files/styles/max_650x650/public/tv-post-images/2020-06/cambios-en-la-compra-de-la-farmacia.jpg?itok=vXalMx7S"
+    src="https://directivosygerentes.es/wp-content/uploads/2019/07/farmacia-online.jpg"
   />
 </div>
