registro de medicamentos

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,27 +3,18 @@
     <a class="atras" href="javascript:history.back()">
       <img
         src="https://thumbs.dreamstime.com/b/icono-de-flecha-s%C3%B3lida-hacia-atr%C3%A1s-o-la-izquierda-gran-tama%C3%B1o-negro-esbozado-como-s%C3%ADmbolo-vector-189359889.jpg"
-        height="33"
-        width="50"
-        alt="Botón"
-      />
+        height="33" width="50" alt="Botón" />
     </a>
   </div>
   <div class="header">
-    <img
-      src="https://cdn.discordapp.com/attachments/719010991924314126/977421848151216158/logotf.png"
-    />
+    <img src="https://cdn.discordapp.com/attachments/719010991924314126/977421848151216158/logotf.png" />
 
     <div class="slogan2">TUFARMACIA</div>
   </div>
   <div class="formulario">
     <form class="form">
       <div class="form-floating mb-3 fix-select">
-        <select
-          class="form-select"
-          id="floatingSelect"
-          aria-label="Floating label select example"
-        >
+        <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
           <option selected>Deslizar hacia abajo</option>
           <option value="1">DNI</option>
           <option value="2">RUC</option>
@@ -32,47 +23,25 @@
         <label for="floatingSelect">Tipo de documento</label>
       </div>
       <div class="form-floating mb-3">
-        <input
-          type="email"
-          class="casilla form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-        />
+        <input type="email" class="casilla form-control" id="floatingInput" placeholder="name@example.com" />
         <label for="floatingInput">Numero</label>
       </div>
       <div class="form-floating mb-3">
-        <input
-          type="password"
-          class="casilla form-control"
-          id="floatingPassword"
-          placeholder="Password"
-        />
+        <input type="password" class="casilla form-control" id="floatingPassword" placeholder="Password" />
         <label for="floatingPassword">Password</label>
       </div>
       <p class="muted">
         No tienes cuenta?
-        <a
-          [routerLink]="['/', 'PerfilComponent']"
-          data-bs-toggle="tooltip"
-          title="Default tooltip"
-          >Ingresa aqui</a
-        >
+        <a [routerLink]="['/', 'PerfilComponent']" data-bs-toggle="tooltip" title="Default tooltip">Ingresa aqui</a>
         Para crear una nueva cuenta
       </p>
     </form>
     <button type="submit" class="btn1" [routerLink]="['/', 'UsuarioComponent']">
       Iniciar Sesion
     </button>
-    <br />
     <div class="buttons">
-      <img
-        class="imagen mt-10"
-        src="https://fitory.com/static/FitApp/img/BotonSesionFacebook.png"
-      />
-      <img
-        class="imagen mt-10"
-        src="https://fitory.com/static/FitApp/img/BotonSesionGoogle.png"
-      />
+      <img class="imagen mt-10" src="https://fitory.com/static/FitApp/img/BotonSesionFacebook.png" />
+      <img class="imagen mt-10" src="https://fitory.com/static/FitApp/img/BotonSesionGoogle.png" />
     </div>
   </div>
 </div>
