--- a/src/app/usuariofarmacia/usuariofarmacia.component.html
+++ b/src/app/usuariofarmacia/usuariofarmacia.component.html
@@ -4,19 +4,22 @@
 <div class="contenedor">
   <img class="logo" src="https://cdn.discordapp.com/attachments/719010991924314126/977421848151216158/logotf.png" />
   <div class="slogan">TUFARMACIA</div>
-  <br />
   <img class="logo2"
-    src="https://png.pngtree.com/png-vector/20190223/ourlarge/pngtree-profile-glyph-black-icon-png-image_691589.jpg "
-    onclick="openImg()" />
-  <div class="slogan">NOMBRE FARMACIA</div>
-  <div>
-    <br />
-    <button class="boton" [routerLink]="['/', 'PerfilComponent']">
-      Registrar Sucursales
+    src="https://png.pngtree.com/png-vector/20190223/ourlarge/pngtree-profile-glyph-black-icon-png-image_691589.jpg " />
+ 
+    <div class="slogan2">NOMBRE FARMACIA</div>
+    <div>
+      <br />
+      <button class="boton" [routerLink]="['/', 'MedicamentoComponent']">
+        Registrar Medicamentos
+      </button>
+      <br />
+    <button class="boton" [routerLink]="['/', 'LoginComponent']">
+      Listar Medicamentos
     </button>
     <br />
     <button class="boton" [routerLink]="['/', 'LoginComponent']">
-      Listar Productos
+      Registrar Direccion y estado
     </button>
     <br />
     <button class="boton" [routerLink]="['/', 'LoginComponent']">
