--- a/src/app/usuariofarmacia/usuariofarmacia.component.scss
+++ b/src/app/usuariofarmacia/usuariofarmacia.component.scss
@@ -26,10 +26,11 @@ div{
   }
 .logo2 {
     width: 200px;
+    border-radius: 400px;
   
     @media (max-width: 560px) {
       width: 50%;
-      height: 180px;
+      height: 190px;
     }
   }
 .slogan{
@@ -38,6 +39,13 @@ div{
     color: #ffffff;
     font-family: fantasy;
     font-size: 30px;  
+}
+.slogan2{
+  display: flex;
+  justify-content: center;
+  color: #ffffff;
+  font-family: fantasy;
+  font-size: 20px;  
 }
 .boton {
     display: flex;
@@ -52,8 +60,8 @@ div{
     padding: 5px;
     background-color: #00ff6f;
     border-color: #00ff6f;
-    border-radius: 400px;
-    min-width: 300px;
+    border-radius: 5px;
+    min-width: 280px;
   }
   .boton2 {
     display: flex;
@@ -68,8 +76,8 @@ div{
     padding: 5px;
     background-color: #00ff6f;
     border-color: #00ff6f;
-    border-radius: 400px;
-    min-width: 200px;
+    border-radius: 5px;
+    min-width: 150px;
   }
 
 
