listado de medicamentos

--- a/src/app/medicamento/medicamento.component.html
+++ b/src/app/medicamento/medicamento.component.html
@@ -74,8 +74,8 @@
       <div>
         <label for="validationDefault01" class="form-label">
           <div class="form1 form-floating">
-            <input type="text" class="form-control" id="floatingInput" placeholder="concentracion" required />
-            <label for="floatingInput">Concentracion</label>
+            <input type="text" class="form-control" id="floatingInput" placeholder="dosis" required />
+            <label for="floatingInput">Dosis</label>
           </div>
         </label>
         <div class="form2 form-floating fix-select">
