--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,13 +1,12 @@
-<div><a class="atras" href="javascript:history.back()"> <img
+<!--<div><a class="atras" href="javascript:history.back()"> <img
       src="https://thumbs.dreamstime.com/b/icono-de-flecha-s%C3%B3lida-hacia-atr%C3%A1s-o-la-izquierda-gran-tama%C3%B1o-negro-esbozado-como-s%C3%ADmbolo-vector-189359889.jpg"
-      height="33" width="50" alt="Botón"> </a></div>
+      height="33" width="50" alt="Botón"> </a></div>-->
 <div class="contenedor">
   <img class="logo" src="https://cdn.discordapp.com/attachments/719010991924314126/977421848151216158/logotf.png" />
   <div class="slogan">TUFARMACIA</div>
   <img class="logo2"
     src="https://png.pngtree.com/png-vector/20190223/ourlarge/pngtree-profile-glyph-black-icon-png-image_691589.jpg "
      />
-    <!--<input type="file" name="f_subir" id="f_subir" value="">-->
   <div class="slogan2">NOMBRE</div>
   <br />
   <div>
