--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -4,26 +4,22 @@
 <div class="contenedor">
   <img class="logo" src="https://cdn.discordapp.com/attachments/719010991924314126/977421848151216158/logotf.png" />
   <div class="slogan">TUFARMACIA</div>
-  <img class="logo2"
+  <img class="logo2" [routerLink]="['/', 'EditarUsuarioComponent']"
     src="https://png.pngtree.com/png-vector/20190223/ourlarge/pngtree-profile-glyph-black-icon-png-image_691589.jpg "
      />
   <div class="slogan2">NOMBRE</div>
   <br />
   <div>
-    <button class="boton" [routerLink]="['/', 'PerfilComponent']">
+    <button class="boton" [routerLink]="['/', 'BuscarFarmaciaComponent']">
       Busqueda de Farmacias
     </button>
     <br />
-    <button class="boton" [routerLink]="['/', 'LoginComponent']">
+    <button class="boton" [routerLink]="['/', 'BuscarMedicamentoComponent']">
       Busqueda de Medicamentos
     </button>
     <br />
-    <button class="boton" [routerLink]="['/', 'LoginComponent']">
+    <button class="boton" [routerLink]="['/', 'HistorialComponent']">
       Historial de Consultas
-    </button>
-    <br />
-    <button class="boton" [routerLink]="['/', 'EditarUsuarioComponent']">
-      Editar Perfil
     </button>
     <br /><br /><br />
     <button class="boton2" [routerLink]="['/', 'LoginComponent']">
