--- a/src/app/buscarfarmacia/buscarfarmacia.component.scss
+++ b/src/app/buscarfarmacia/buscarfarmacia.component.scss
@@ -8,7 +8,6 @@
   align-items: center;
 }
 
-
 .logo {
   width: 180px;
 
@@ -32,7 +31,7 @@
   font-family: fantasy;
   font-size: 25px;
   position: relative;
-  right: 70px;
+  right: 68px;
 }
 
 .container-4{
@@ -89,7 +88,7 @@
   transition: all .55s ease;
 }
 
-.boton2 {
+.boton {
   display: flex;
   cursor: pointer;
   justify-content: center;
