se cambio a perfil farmacia

--- a/src/app/direccion/direccion.component.html
+++ b/src/app/direccion/direccion.component.html
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="col-md-3 col-md-offset-9 text-right">
         <div class="btn-group contenedor-botones" role="group">
-          <button class="btn1 btn-primary" type="submit" [routerLink]="['/', 'MedicamentoComponent']">
+          <button class="btn1 btn-primary" type="submit" [routerLink]="['/', 'MapScreenComponent']">
             Guardar
           </button>
           <button class="btn2 btn-primary" type="reset" [routerLink]="['/', 'UsuariofarmaciaComponent']">
