--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,7 @@
         Para crear una nueva cuenta
       </p>
     </form>
-    <button type="submit" class="btn1" [routerLink]="['/', 'UsuarioComponent']">
+    <button type="submit" class="btn1" [routerLink]="['/', 'UsuariofarmaciaComponent']">
       Iniciar Sesion
     </button>
     <div class="buttons">
