cambios de campo direccion

--- a/src/app/direccion/direccion.component.html
+++ b/src/app/direccion/direccion.component.html
@@ -19,6 +19,7 @@
           <label for="floatingInput">Direccion</label>
         </div>
       </label>
+      <app-search-bar></app-search-bar>
       <br /><br />
       <div class="slogan3">ESTADO</div>
       <br />
